test/positive/feature_classimport.java

import java.util.Vector;

public class feature_classimport {
  public feature_classimport() {}
  protected Vector c;
}

