test/negative/CyclicClasses/B.java
package B;
import A.A;
public class B extends A {
    public B() {}
}
